implemented report A4/A6 with unit search

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -212,6 +212,19 @@
     "reports.a4.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt) hat ein/e spezifische/r Aussteller/in in einem definierten Zeitraum über welche Kanäle ausgestellt? </strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine Liste mit den ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI.",
     "reports.a4.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin, eines bestimmten Ausstellers oder Organisationseinheit (Unit).",
     "reports.a4.title": "A4 / A6",
+    "reports.a4a6.chooseDataroom": "Wählen Sie einen Kanton/Bereich aus, um Einheiten anzuzeigen",
+    "reports.a4a6.email": "E-Mail",
+    "reports.a4a6.firstName": "Vorname",
+    "reports.a4a6.issuer": "Suche nach Aussteller/in",
+    "reports.a4a6.noUnitsFound": "Keine Einheiten gefunden",
+    "reports.a4a6.noUserSelected": " Noch keine Benutzer/innen ausgewählt",
+    "reports.a4a6.oneUserHasToBeSelected": "Mindestens ein/e Benutzer/in muss ausgewählt sein",
+    "reports.a4a6.organisation": "Suche nach Organisation",
+    "reports.a4a6.organisationOrIssuer": "Bitte wählen Sie aus, ob Sie nach Organisation oder nach Aussteller/in suchen wollen:",
+    "reports.a4a6.search": "Suchen",
+    "reports.a4a6.selectedUser": "Hinzugefügte Einheiten",
+    "reports.a4a6.surName": "Nachname",
+    "reports.a4a6.title": "A4 / A6",
     "reports.a5.description.long": "<strong>Wie viele Zertifikate welchen Typs haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
     "reports.a6.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt, Kanal) haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit den pro Aussteller/in ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI pro Zertifikat.",
@@ -260,6 +273,7 @@
     "reports.dataRoomSelection": "Ausgewählter Kanton/Bereich:",
     "reports.dateFromTo.date-from": "Anfangsdatum",
     "reports.dateFromTo.date-to": "Enddatum",
+    "reports.dateFromTo.dateTooSmall": "Das Datum muss nach dem 30.04.2021 liegen",
     "reports.dateFromTo.startDateBeforeEndDate": "Anfangsdatum darf nicht nach dem Enddatum liegen",
     "reports.dateFromTo.text": "Bitte wählen Sie ein Anfangs- und ein Enddatum des Ausstellungszeitraums für den Report aus:",
     "reports.detail.header": "Sie möchten einen konkreten Verdachtsfall belegen oder widerlegen, indem Sie die einzelnen Aktionen einer Ausstellerin/eines Ausstellers analysieren? Erstellen Sie dazu einen Detailreport.",
