--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -212,6 +212,19 @@
     "reports.a4.description.long": "<strong>What certificates (UVCI, type and time) did a specific issuer issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI.",
     "reports.a4.description.short": "Detailed information on all certificates issued by a specific issuer or organisational unit.",
     "reports.a4.title": "A4 / A6",
+    "reports.a4a6.chooseDataroom": "Wählen Sie einen Kanton/Bereich aus, um Einheiten anzuzeigen (EN)",
+    "reports.a4a6.email": "E-Mail",
+    "reports.a4a6.firstName": "First name",
+    "reports.a4a6.issuer": "Search by issuer",
+    "reports.a4a6.noUnitsFound": "Keine Einheiten gefunden (EN)",
+    "reports.a4a6.noUserSelected": "Noch keine Benutzer/innen ausgewählt (EN)",
+    "reports.a4a6.oneUserHasToBeSelected": "Mindestens ein/e Benutzer/in muss ausgewählt sein (EN)",
+    "reports.a4a6.organisation": "Search by organisation",
+    "reports.a4a6.organisationOrIssuer": "Please choose whether you want to search by organisation or by issuer:",
+    "reports.a4a6.search": "Search",
+    "reports.a4a6.selectedUser": "Added units",
+    "reports.a4a6.surName": "Last name",
+    "reports.a4a6.title": "A4 / A6",
     "reports.a5.description.long": "<strong>How many certificates of what type did individual issuers in a unit issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.",
     "reports.a5.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
     "reports.a6.description.long": "<strong>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI of each certificate.",
@@ -260,6 +273,7 @@
     "reports.dataRoomSelection": "Canton/area selected:",
     "reports.dateFromTo.date-from": "Start date",
     "reports.dateFromTo.date-to": "End date",
+    "reports.dateFromTo.dateTooSmall": "The date must be after 30.04.2021",
     "reports.dateFromTo.startDateBeforeEndDate": "Start date must not be after the end date",
     "reports.dateFromTo.text": "Please select a start and end date for the issue period for the report:",
     "reports.detail.header": "Want to prove or refute a concrete case of suspicion by analysing the individual actions of an issuer? Then create an detailed report.",
