--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -212,6 +212,19 @@
     "reports.a4.description.long": "<strong>Quels certificats (UVCI, type, date) un émetteur spécifique a-t-il délivrés et par quels canaux au cours d’une période donnée?</strong></br></br>Après saisie et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste des certificats délivrés, y compris des détails tels que le type de certificat, le canal d’émission, la date d’émission et l’UVCI.",
     "reports.a4.description.short": "Informations détaillées sur tous les certificats délivrés par un émetteur ou une unité organisationnelle (unit) spécifique.",
     "reports.a4.title": "A4 / A6",
+    "reports.a4a6.chooseDataroom": "Wählen Sie einen Kanton/Bereich aus, um Einheiten anzuzeigen (FR)",
+    "reports.a4a6.email": "E-Mail",
+    "reports.a4a6.firstName": "Prénom",
+    "reports.a4a6.issuer": "Recherche par émetteur",
+    "reports.a4a6.noUnitsFound": "Keine Einheiten gefunden (FR)",
+    "reports.a4a6.noUserSelected": "Noch keine Benutzer/innen ausgewählt (FR)",
+    "reports.a4a6.oneUserHasToBeSelected": "Mindestens ein/e Benutzer/in muss ausgewählt sein (FR)",
+    "reports.a4a6.organisation": "Recherche par organisation",
+    "reports.a4a6.organisationOrIssuer": "Veuillez indiquer si vous souhaitez effectuer votre recherche par organisation ou par émetteur:",
+    "reports.a4a6.search": "Rechercher",
+    "reports.a4a6.selectedUser": "Unités ajoutés",
+    "reports.a4a6.surName": "Nom",
+    "reports.a4a6.title": "A4 / A6",
     "reports.a5.description.long": "<strong>Combien de certificats de quel type les différents émetteurs d’une unité ont-ils délivrés, et par quels canaux, au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a5.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
     "reports.a6.description.long": "<strong>Quels certificats (UVCI, type, date, canal) chaque émetteur d’une unité a-t-il délivrés au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste structurée par émetteur avec les certificats délivrés par émetteur, y compris des détails tels que le type de certificat, le canal d’émission, la date d’émission et l’UVCI par certificat.",
@@ -260,6 +273,7 @@
     "reports.dataRoomSelection": "Canton/domaine sélectionné:",
     "reports.dateFromTo.date-from": "Date de début",
     "reports.dateFromTo.date-to": "Date de fin",
+    "reports.dateFromTo.dateTooSmall": "La date doit être située après le 30.04.2021",
     "reports.dateFromTo.startDateBeforeEndDate": "La date de début ne doit pas être postérieure à la date de fin",
     "reports.dateFromTo.text": "Veuillez sélectionner une date de début et une date de fin de la période d’émission pour le rapport:",
     "reports.detail.header": "Vous souhaitez confirmer ou infirmer un soupçon concret en analysant les activités d’un émetteur précis ? Rédigez un rapport de détail.",
