--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -212,6 +212,19 @@
     "reports.a4.description.long": "<strong>Quali certificati (UVCI, tipo, data) sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
     "reports.a4.description.short": "Informazioni dettagliate su tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit). ",
     "reports.a4.title": "A4 / A6",
+    "reports.a4a6.chooseDataroom": "Wählen Sie einen Kanton/Bereich aus, um Einheiten anzuzeigen (IT)",
+    "reports.a4a6.email": "E-Mail",
+    "reports.a4a6.firstName": "Nome",
+    "reports.a4a6.issuer": "Ricerca per emittente",
+    "reports.a4a6.noUnitsFound": "Keine Einheiten gefunden (IT)",
+    "reports.a4a6.noUserSelected": "Noch keine Benutzer/innen ausgewählt (IT)",
+    "reports.a4a6.oneUserHasToBeSelected": "Mindestens ein/e Benutzer/in muss ausgewählt sein (IT)",
+    "reports.a4a6.organisation": "Ricerca per organizzazione",
+    "reports.a4a6.organisationOrIssuer": "Selezionare se effettuare una ricerca per organizzazione o per emittente:",
+    "reports.a4a6.search": "Ricerca",
+    "reports.a4a6.selectedUser": "Unità aggiunti",
+    "reports.a4a6.surName": "Cognome",
+    "reports.a4a6.title": "A4 / A6",
     "reports.a5.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione.",
     "reports.a5.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
     "reports.a6.description.long": "<strong>Quali certificati (UVCI, tipo, data, canale) sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
@@ -260,6 +273,7 @@
     "reports.dataRoomSelection": "Cantone/settore selezionato:",
     "reports.dateFromTo.date-from": "Data di inizio",
     "reports.dateFromTo.date-to": "Data di fine",
+    "reports.dateFromTo.dateTooSmall": "La data deve essere successiva al 30.04.2021",
     "reports.dateFromTo.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
     "reports.dateFromTo.text": "Selezionare una data di inizio e una data di fine del periodo di emissione per il rapporto:",
     "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
