implemented issuer search

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -194,6 +194,9 @@
     "otp.key": "Geheimschlüssel",
     "otp.link": "One-Time-Password generieren",
     "otp.title": "Neues One-Time-Password generieren",
+    "paginator.nextPage": "Nächste Seite",
+    "paginator.previousPage": "Vorherige Seite",
+    "paginator.range": "Seite {{page}} von {{amountPages}}",
     "report.link": "Report",
     "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
     "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
@@ -222,9 +225,11 @@
     "reports.a4a6.organisation": "Suche nach Organisation",
     "reports.a4a6.organisationOrIssuer": "Bitte wählen Sie aus, ob Sie nach Organisation oder nach Aussteller/in suchen wollen:",
     "reports.a4a6.search": "Suchen",
+    "reports.a4a6.searchByParameter": "Schränken Sie Ihre Suche durch die Eingabe der Parameter ein:",
     "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen",
     "reports.a4a6.surName": "Nachname",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.unit": "Einheit",
     "reports.a5.description.long": "<strong>Wie viele Zertifikate welchen Typs haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
     "reports.a6.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt, Kanal) haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit den pro Aussteller/in ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI pro Zertifikat.",
