--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -194,6 +194,9 @@
     "otp.key": "Clé secrète",
     "otp.link": "Générer un One-Time-Password",
     "otp.title": "Générer un nouvel One-Time-Password",
+    "paginator.nextPage": "Page suivante",
+    "paginator.previousPage": "Page précédente",
+    "paginator.range": "Page {{page}} sur {{amountPages}}",
     "report.link": "Rapport",
     "reports.a10.description.long": "<strong>Quels émetteurs ont délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés.",
     "reports.a10.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
@@ -216,15 +219,17 @@
     "reports.a4a6.email": "E-Mail",
     "reports.a4a6.firstName": "Prénom",
     "reports.a4a6.issuer": "Recherche par émetteur",
-    "reports.a4a6.noUnitsFound": "Keine Einheiten gefunden (FR)",
-    "reports.a4a6.noUserSelected": "Noch keine Benutzer/innen ausgewählt (FR)",
-    "reports.a4a6.oneUserHasToBeSelected": "Mindestens ein/e Benutzer/in muss ausgewählt sein (FR)",
+    "reports.a4a6.noUnitsFound": "Aucune unité trouvée",
+    "reports.a4a6.noUserSelected": "Encore aucun utilisateur sélectionné",
+    "reports.a4a6.oneUserHasToBeSelected": "Veuillez sélectionner au moins un utilisateur",
     "reports.a4a6.organisation": "Recherche par organisation",
     "reports.a4a6.organisationOrIssuer": "Veuillez indiquer si vous souhaitez effectuer votre recherche par organisation ou par émetteur:",
     "reports.a4a6.search": "Rechercher",
+    "reports.a4a6.searchByParameter": "Affinez votre recherche en saisissant les paramètres suivants:",
     "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen (FR)",
     "reports.a4a6.surName": "Nom",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.unit": "Unité organisationnelle",
     "reports.a5.description.long": "<strong>Combien de certificats de quel type les différents émetteurs d’une unité ont-ils délivrés, et par quels canaux, au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a5.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
     "reports.a6.description.long": "<strong>Quels certificats (UVCI, type, date, canal) chaque émetteur d’une unité a-t-il délivrés au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste structurée par émetteur avec les certificats délivrés par émetteur, y compris des détails tels que le type de certificat, le canal d’émission, la date d’émission et l’UVCI par certificat.",
