--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -194,6 +194,9 @@
     "otp.key": "Chiave segreta",
     "otp.link": "Genera One-Time-Password",
     "otp.title": "Generare una nuova One-Time-Password",
+    "paginator.nextPage": "Pagina successiva",
+    "paginator.previousPage": "Pagina precedente",
+    "paginator.range": "Pagina {{page}} da {{amountPages}}",
     "report.link": "Rapporto",
     "reports.a10.description.long": "<strong>Quali emittenti hanno rilasciato un tipo specifico di certificato e quanti ne hanno rilasciati in un determinato periodo di tempo?</strong></br></br>Dopo che è stato selezionato un tipo di certificato, il rapporto fornisce un elenco, suddiviso per emittente, con il numero totale di tipi di certificati rilasciati.",
     "reports.a10.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
@@ -216,15 +219,17 @@
     "reports.a4a6.email": "E-Mail",
     "reports.a4a6.firstName": "Nome",
     "reports.a4a6.issuer": "Ricerca per emittente",
-    "reports.a4a6.noUnitsFound": "Keine Einheiten gefunden (IT)",
-    "reports.a4a6.noUserSelected": "Noch keine Benutzer/innen ausgewählt (IT)",
-    "reports.a4a6.oneUserHasToBeSelected": "Mindestens ein/e Benutzer/in muss ausgewählt sein (IT)",
+    "reports.a4a6.noUnitsFound": "Non è stata trovata nessuna unità",
+    "reports.a4a6.noUserSelected": "Non è ancora stato selezionato alcun utente",
+    "reports.a4a6.oneUserHasToBeSelected": "Deve essere selezionato almeno un utente",
     "reports.a4a6.organisation": "Ricerca per organizzazione",
     "reports.a4a6.organisationOrIssuer": "Selezionare se effettuare una ricerca per organizzazione o per emittente:",
     "reports.a4a6.search": "Ricerca",
+    "reports.a4a6.searchByParameter": "Perfezionare la ricerca inserendo i parametri:",
     "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen (IT)",
     "reports.a4a6.surName": "Cognome",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.unit": "Unità",
     "reports.a5.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione.",
     "reports.a5.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
     "reports.a6.description.long": "<strong>Quali certificati (UVCI, tipo, data, canale) sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
