--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -194,6 +194,9 @@
     "otp.key": "Private key",
     "otp.link": "Generate One-Time-Password",
     "otp.title": "Generate new One-Time-Password",
+    "paginator.nextPage": "Next page",
+    "paginator.previousPage": "Previous page",
+    "paginator.range": "Pagen {{page}} of {{amountPages}}",
     "report.link": "Report",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
@@ -216,15 +219,17 @@
     "reports.a4a6.email": "E-Mail",
     "reports.a4a6.firstName": "First name",
     "reports.a4a6.issuer": "Search by issuer",
-    "reports.a4a6.noUnitsFound": "Keine Einheiten gefunden (EN)",
-    "reports.a4a6.noUserSelected": "Noch keine Benutzer/innen ausgewählt (EN)",
-    "reports.a4a6.oneUserHasToBeSelected": "Mindestens ein/e Benutzer/in muss ausgewählt sein (EN)",
+    "reports.a4a6.noUnitsFound": "No units found",
+    "reports.a4a6.noUserSelected": "No user selected yet",
+    "reports.a4a6.oneUserHasToBeSelected": "At least one user must be selected",
     "reports.a4a6.organisation": "Search by organisation",
     "reports.a4a6.organisationOrIssuer": "Please choose whether you want to search by organisation or by issuer:",
     "reports.a4a6.search": "Search",
+    "reports.a4a6.searchByParameter": "Limit your search by entering parameters:",
     "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen (EN)",
     "reports.a4a6.surName": "Last name",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.unit": "Unit",
     "reports.a5.description.long": "<strong>How many certificates of what type did individual issuers in a unit issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.",
     "reports.a5.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
     "reports.a6.description.long": "<strong>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI of each certificate.",
