added missing translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -215,7 +215,7 @@
     "reports.a4.description.long": "<strong>What certificates (UVCI, type and time) did a specific issuer issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI.",
     "reports.a4.description.short": "Detailed information on all certificates issued by a specific issuer or organisational unit.",
     "reports.a4.title": "A4 / A6",
-    "reports.a4a6.chooseDataroom": "Wählen Sie einen Kanton/Bereich aus, um Einheiten anzuzeigen (EN)",
+    "reports.a4a6.chooseDataroom": "Select a canton/area to display units",
     "reports.a4a6.email": "E-Mail",
     "reports.a4a6.firstName": "First name",
     "reports.a4a6.issuer": "Search by issuer",
@@ -226,7 +226,7 @@
     "reports.a4a6.organisationOrIssuer": "Please choose whether you want to search by organisation or by issuer:",
     "reports.a4a6.search": "Search",
     "reports.a4a6.searchByParameter": "Limit your search by entering parameters:",
-    "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen (EN)",
+    "reports.a4a6.selectedUser": "Users added",
     "reports.a4a6.surName": "Last name",
     "reports.a4a6.title": "A4 / A6",
     "reports.a4a6.unit": "Unit",
