--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -215,7 +215,7 @@
     "reports.a4.description.long": "<strong>Quali certificati (UVCI, tipo, data) sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
     "reports.a4.description.short": "Informazioni dettagliate su tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit). ",
     "reports.a4.title": "A4 / A6",
-    "reports.a4a6.chooseDataroom": "Wählen Sie einen Kanton/Bereich aus, um Einheiten anzuzeigen (IT)",
+    "reports.a4a6.chooseDataroom": "Selezionare un Cantone/settore per visualizzare le unità",
     "reports.a4a6.email": "E-Mail",
     "reports.a4a6.firstName": "Nome",
     "reports.a4a6.issuer": "Ricerca per emittente",
@@ -226,7 +226,7 @@
     "reports.a4a6.organisationOrIssuer": "Selezionare se effettuare una ricerca per organizzazione o per emittente:",
     "reports.a4a6.search": "Ricerca",
     "reports.a4a6.searchByParameter": "Perfezionare la ricerca inserendo i parametri:",
-    "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen (IT)",
+    "reports.a4a6.selectedUser": "Utenti aggiunti",
     "reports.a4a6.surName": "Cognome",
     "reports.a4a6.title": "A4 / A6",
     "reports.a4a6.unit": "Unità",
