--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -215,7 +215,7 @@
     "reports.a4.description.long": "<strong>Quels certificats (UVCI, type, date) un émetteur spécifique a-t-il délivrés et par quels canaux au cours d’une période donnée?</strong></br></br>Après saisie et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste des certificats délivrés, y compris des détails tels que le type de certificat, le canal d’émission, la date d’émission et l’UVCI.",
     "reports.a4.description.short": "Informations détaillées sur tous les certificats délivrés par un émetteur ou une unité organisationnelle (unit) spécifique.",
     "reports.a4.title": "A4 / A6",
-    "reports.a4a6.chooseDataroom": "Wählen Sie einen Kanton/Bereich aus, um Einheiten anzuzeigen (FR)",
+    "reports.a4a6.chooseDataroom": "Sélectionnez un canton/domaine pour afficher les unités",
     "reports.a4a6.email": "E-Mail",
     "reports.a4a6.firstName": "Prénom",
     "reports.a4a6.issuer": "Recherche par émetteur",
@@ -226,7 +226,7 @@
     "reports.a4a6.organisationOrIssuer": "Veuillez indiquer si vous souhaitez effectuer votre recherche par organisation ou par émetteur:",
     "reports.a4a6.search": "Rechercher",
     "reports.a4a6.searchByParameter": "Affinez votre recherche en saisissant les paramètres suivants:",
-    "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen (FR)",
+    "reports.a4a6.selectedUser": "Utilisateurs ajoutés",
     "reports.a4a6.surName": "Nom",
     "reports.a4a6.title": "A4 / A6",
     "reports.a4a6.unit": "Unité organisationnelle",
