--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -226,6 +226,7 @@
     "reports.a4a6.organisationOrIssuer": "Selezionare se effettuare una ricerca per organizzazione o per emittente:",
     "reports.a4a6.search": "Ricerca",
     "reports.a4a6.searchByParameter": "Perfezionare la ricerca inserendo i parametri:",
+    "reports.a4a6.searchByUnitName": "Limitare l’immissione indicando l’organizzazione cercata",
     "reports.a4a6.selectedUser": "Utenti aggiunti",
     "reports.a4a6.surName": "Cognome",
     "reports.a4a6.title": "A4 / A6",
