--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,7 +154,7 @@
     "footer.privacyStatement": "Privacy statement",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/en/home/documentation/covid-certificate-app.html",
     "gracePeriodMessage": "This rapid test product can be used until {{validUntil}}; after that date, it can no longer be used to generate certificates.",
-    "home.administration": "Instructions for user administration (delegated management) by superuser",
+    "home.administration": "Instructions and informations on user management",
     "home.faq": "FAQ",
     "home.faq.url": "https://www.bag.admin.ch/bag/de/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#-40000965",
     "home.instructions": "You are on the website for generating COVID certificates.",
@@ -196,7 +196,7 @@
     "otp.title": "Generate new One-Time-Password",
     "paginator.nextPage": "Next page",
     "paginator.previousPage": "Previous page",
-    "paginator.range": "Pagen {{page}} of {{amountPages}}",
+    "paginator.range": "Page {{page}} of {{amountPages}}",
     "report.link": "Report",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
