implemented max period days validator; implemented max selected user validator

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -154,7 +154,7 @@
     "footer.privacyStatement": "Informativa sulla privacy",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/it/home/documentazione/covid-certificate-app.html",
     "gracePeriodMessage": "Questo prodotto per il test antigenico rapido può essere utilizzato fino al {{validUntil}}. Dopo tale data non è più possibile generare certificati COVID con questo prodotto.",
-    "home.administration": "Istruzioni per l'amministrazione degli utenti (gestione delegata) da parte del superutente",
+    "home.administration": "Istruzioni e informazioni sulla gestione degli utenti",
     "home.faq": "Domande frequenti (FAQ)",
     "home.faq.url": "https://www.bag.admin.ch/bag/it/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#989332307",
     "home.instructions": "Questo è il sito per creare certificati COVID.",
@@ -230,6 +230,7 @@
     "reports.a4a6.selectedUser": "Utenti aggiunti",
     "reports.a4a6.surName": "Cognome",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.tooManyUsers": "È possibile selezionare un massimo di {{requiredLength}} utenti, voi ne avete selezionati {{actualLength}}",
     "reports.a4a6.unit": "Unità",
     "reports.a5.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione.",
     "reports.a5.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
@@ -280,6 +281,7 @@
     "reports.dateFromTo.date-from": "Data di inizio",
     "reports.dateFromTo.date-to": "Data di fine",
     "reports.dateFromTo.dateTooSmall": "La data deve essere successiva al 30.04.2021",
+    "reports.dateFromTo.maxPeriodDays": "Il periodo può essere al massimo di {{maxPeriodDays}} giorni",
     "reports.dateFromTo.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
     "reports.dateFromTo.text": "Selezionare una data di inizio e una data di fine del periodo di emissione per il rapporto:",
     "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
